src/main/java/com/example/diningwith/core/support/error/GlobalException.java
package com.example.diningwith.core.support.error;

public class GlobalException extends TypeException {
    public GlobalException(ExceptionType exceptionType) {
        super(exceptionType);
    }
}
